--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,19 @@
+/* * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+} */
+
+
 .grey{
  color: grey;
 }
 
 .yellow{
   color: yellow;
+}
+
+.film_list .film,
+.film_list .tv {
+  list-style: none;
 }
