--- a/css/style.css
+++ b/css/style.css
@@ -1,49 +1,116 @@
-/* * {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-} */
-
+}
 
 .grey{
- color: grey;
+  color: grey;
 }
 
 .yellow{
   color: yellow;
 }
 
-.film_list .film,
-.film_list .tv {
-  list-style: none;
+body{
+  background-color: #ccdaff ;
 }
 
+/* Header */
+.header{
+  width: 100%;
+  height: 80px;
+  padding: 0 20px;
+  background-color: black;
+}
+
+.header::after{
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.logo{
+  float: left;
+  color: blue;
+}
+
+.logo h2{
+  font-size: 30px;
+}
+
+.searchbar{
+  float: right;
+}
+
+.logo,
+.searchbar{
+  line-height: 80px;
+}
+
+/* Main */
 .container{
   position: relative;
   width: 100%;
-
+  height: 10vh;
+  margin-top: 80px;
 }
 
-.film_list {
-
+.container h1{
+  text-align: center;
+  font-size: 50px;
 }
 
- .tv_poster,
- .film_poster{
+.film_list::after{
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.film_list .film_poster img {
+  width: 100%;
+}
+
+.box-tv,
+.box-film {
+  /* text-align: center;
+  display: block; */
+  position: relative;
+  width: calc(100% / 3);
+  float: left;
+  overflow: hidden;
+}
+
+.box-tv:hover,
+.box-film:hover{
+  overflow: hidden;
+}
+
+/* Image-box */
+.tv_poster,
+.film_poster{
   top: 0;
   width: 100%;
   height: auto;
 }
 
- .tv,
- .film {
+.tv_poster:hover,
+.film_poster:hover{
+  overflow: hidden;
+}
+
+/* Text-box */
+.tv,
+.film{
    position: absolute;
    top: 0;
+   left: 0;
    display: block;
    width: 100%;
    height: 100%;
-   background-color: grey;
-   z-index: 1000;
+   font-size: 18px;
+   background-color: lightgrey;
+   z-index: 3;
    opacity: 0;
 }
 
@@ -53,22 +120,23 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: fit-content;
+  list-style: none;
+  text-align: center;
 }
-
-/* .film_list:hover{
-  opacity: 1;
-  background-color: grey;
-} */
 
 .tv:hover,
 .film:hover {
   opacity: 1;
+  /* overflow: hidden; */
 }
 
 .box-tv,
 .box-film {
-  text-align: center;
-  display: block;
+  /* text-align: center;
+  display: block; */
   position: relative;
-  width: 30%
+  width: calc(100% / 3);
+  float: left;
+  overflow: hidden;
 }
